force-app/main/default/objects/Lead/fields/Account_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Created Date</label>
    <type>DateTime</type>
</CustomField>