force-app/main/default/objects/Lead/fields/Accutics_Affiliate_Platform__c.field-meta.xml
<CustomField>
    <fullName>Accutics_Affiliate_Platform__c</fullName>
    <description>This field is needed to sync campaign accutics data to Lead object during lead creation</description>
    <label>Affiliate Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>