force-app/main/default/objects/Lead/fields/Accutics_AffiliatePartner_ID__c.field-meta.xml
<CustomField>
    <fullName>Accutics_AffiliatePartner_ID__c</fullName>
    <description>This field is needed to sync campaign accutics data to Lead object during lead creation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Affiliate Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>