force-app/main/default/objects/Lead/fields/Accutics_Lead_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Accutics_Lead_Funnel_Stage__c</fullName>
    <description>This field is needed to sync campaign accutics data to Lead object during lead creation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Funnel Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>