force-app/main/default/objects/Lead/fields/Accutics_Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Accutics_Lead_Medium__c</fullName>
    <description>This field is needed to sync campaign accutics data to Lead object during lead creation</description>
    <label>Lead Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>