force-app/main/default/objects/Lead/fields/adgroup__c.field-meta.xml
<CustomField>
    <fullName>adgroup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>adgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>