force-app/main/default/objects/Lead/fields/Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>