force-app/main/default/objects/Lead/fields/Company_Invite_Token__c.field-meta.xml
<CustomField>
    <fullName>Company_Invite_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Invite Token</label>
    <length>64</length>
    <type>Text</type>
</CustomField>