force-app/main/default/objects/Lead/fields/Contact_s_No_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_No_of_Clients__c</fullName>
    <label>Contact&apos;s No. of Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>