force-app/main/default/objects/Lead/fields/Contractor_Only__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Only</label>
    <type>Checkbox</type>
</CustomField>