force-app/main/default/objects/Lead/fields/ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAccountId__c</fullName>
    <formula>CASESAFEID(ConvertedAccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted AccountId</label>
    <type>Text</type>
</CustomField>