force-app/main/default/objects/Lead/fields/COVID_19_Impact__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Impact__c</fullName>
    <description>Text field created during the Covid19 pandemic to track details on activity for Fulfillment and Sales Teams. See Jira BT-7185 for details.</description>
    <label>COVID-19 Impact</label>
    <type>TextArea</type>
</CustomField>