force-app/main/default/objects/Lead/fields/Created_Truth__c.field-meta.xml
<CustomField>
    <fullName>Created_Truth__c</fullName>
    <formula>IF( ISBLANK( Reseller_Lead_Create_Date__c ) , DATEVALUE(CreatedDate) , IF( Reseller_Lead_Create_Date__c &gt;= DATEVALUE(CreatedDate) , DATEVALUE(CreatedDate) , Reseller_Lead_Create_Date__c ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Truth</label>
    <type>Date</type>
</CustomField>