force-app/main/default/objects/Lead/fields/Dnc_activity_exists__c.field-meta.xml
<CustomField>
    <fullName>Dnc_activity_exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dnc Activity Exists</label>
    <type>Checkbox</type>
</CustomField>