force-app/main/default/objects/Lead/fields/Experiment_Info__c.field-meta.xml
<CustomField>
    <fullName>Experiment_Info__c</fullName>
    <description>Captures Experimentation Variant Identifier from Panda.</description>
    <label>Experiment Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>