force-app/main/default/objects/Lead/fields/External_Accountant_Email__c.field-meta.xml
<CustomField>
    <fullName>External_Accountant_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Accountant Email</label>
    <type>Email</type>
</CustomField>