force-app/main/default/objects/Lead/fields/External_Accountant_Lead__c.field-meta.xml
<CustomField>
    <fullName>External_Accountant_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Accountant Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Direct Xero Leads</relationshipLabel>
    <relationshipName>External_Accountant_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>