force-app/main/default/objects/Lead/fields/External_Practice_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Practice_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Practice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>