force-app/main/default/objects/Lead/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <inlineHelpText>Enter the URL of the company Facebook page</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>