force-app/main/default/objects/Lead/fields/Followup_Call_Attempts_Complete__c.field-meta.xml
<CustomField>
    <fullName>Followup_Call_Attempts_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated by process builder to identify that the followup attempts are complete.</description>
    <label>Followup Call Attempts Complete</label>
    <type>Checkbox</type>
</CustomField>