force-app/main/default/objects/Lead/fields/Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Form Submitted Date</label>
    <type>DateTime</type>
</CustomField>