force-app/main/default/objects/Lead/fields/GF_Lead_Last_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GF_Lead_Last_Updated_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GF Lead Last Updated Date Time</label>
    <type>DateTime</type>
</CustomField>