force-app/main/default/objects/Lead/fields/Growth_Experiments_when_lead_created__c.field-meta.xml
<CustomField>
    <fullName>Growth_Experiments_when_lead_created__c</fullName>
    <label>Growth Experiments when lead created</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>