force-app/main/default/objects/Lead/fields/Held_Out_Of_Upsell_Communications__c.field-meta.xml
<CustomField>
    <fullName>Held_Out_Of_Upsell_Communications__c</fullName>
    <description>Updated from Marketo</description>
    <label>Held Out Of Upsell Communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Held Out</fullName>
            </value>
            <value>
                <fullName>Exposed</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>