force-app/main/default/objects/Lead/fields/HI_Deductions__c.field-meta.xml
<CustomField>
    <fullName>HI_Deductions__c</fullName>
    <label>HI Deductions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>