force-app/main/default/objects/Lead/fields/Hiplead_Status__c.field-meta.xml
<CustomField>
    <fullName>Hiplead_Status__c</fullName>
    <label>Hiplead Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New - in campaign / not emailed yet</fullName>
            </value>
            <value>
                <fullName>Active - Email sent (no reply yet)</fullName>
            </value>
            <value>
                <fullName>Replied - Not reviewed</fullName>
            </value>
            <value>
                <fullName>Replied - Interested</fullName>
            </value>
            <value>
                <fullName>Replied - Neutral</fullName>
            </value>
            <value>
                <fullName>Replied - Not interested</fullName>
            </value>
            <value>
                <fullName>Replied - Unqualified</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Remove contact</fullName>
            </value>
            <value>
                <fullName>Completed - no reply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>