force-app/main/default/objects/Lead/fields/Influitive_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Influitive_Advocate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Influitive Advocate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>