force-app/main/default/objects/Lead/fields/Invalid_Field_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Field_Exceptions__c</fullName>
    <label>Invalid Field Exceptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Phone Number Exception</fullName>
            </value>
            <value>
                <fullName>Invalid Postal Code Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>