force-app/main/default/objects/Lead/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <description>The last time any type of call was made on this lead (voicemail, attempt, connect, inbound, outbound). Once the lead is converted and if a call is made on it, it will update the Last Call field on the Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The last time any type of call was made on this lead (voicemail, attempt, connect, inbound, outbound). Should also be updated on the Account.</inlineHelpText>
    <label>Last Call</label>
    <type>Date</type>
</CustomField>