force-app/main/default/objects/Lead/fields/Last_Call_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Connect__c</fullName>
    <description>The last time a sales rep connected with the customer on this lead. Should match the most recent Activity marked as &apos;Connect&apos;. Once the lead is converted and if a call is made from this lead, it will update Last Call Connect on the company opportunity.</description>
    <inlineHelpText>The last time a sales rep connected with the customer on this lead.</inlineHelpText>
    <label>Last Call Connect</label>
    <type>Date</type>
</CustomField>