force-app/main/default/objects/Lead/fields/Last_Lead_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Activity_Date__c</fullName>
    <label>Last Lead Activity Date</label>
    <type>Date</type>
</CustomField>