force-app/main/default/objects/Lead/fields/Last_Login_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Login Date Time</label>
    <type>DateTime</type>
</CustomField>