force-app/main/default/objects/Lead/fields/Last_Rep_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Rep_Activity_Date__c</fullName>
    <description>This is updated in code:  
Last_Rep_Activity_Date__c is being updated on a Lead when:
1. Task is created AND
2. Task has associated Lead AND
3. Task type isn&apos;t &quot;Automated Email&quot;</description>
    <label>Last Rep Activity Date</label>
    <type>Date</type>
</CustomField>