force-app/main/default/objects/Lead/fields/Last_Rep_Activity_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Last_Rep_Activity_Date_New__c</fullName>
    <label>Last Rep Activity Date</label>
    <type>Date</type>
</CustomField>