force-app/main/default/objects/Lead/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Channel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>