force-app/main/default/objects/Lead/fields/Lead_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Initiated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Initiated Date</label>
    <type>DateTime</type>
</CustomField>