force-app/main/default/objects/Lead/fields/Lead_Owner_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Calendar_Link__c</fullName>
    <formula>Owner:User.Calendar_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Calendar Link</label>
    <type>Text</type>
</CustomField>