force-app/main/default/objects/Lead/fields/Lead_Rating__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rating__c</fullName>
    <description>Indicates the calculated Score/Rating for the Lead from the Lead scoring tool.</description>
    <label>Lead Rating</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>