force-app/main/default/objects/Lead/fields/Lead_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Stage_Change_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Used for &quot;stuck&quot; Leads, though a Lead History report would show this without the need for a new field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Status Start Time</label>
    <type>DateTime</type>
</CustomField>