force-app/main/default/objects/Lead/fields/Lead_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Detail__c</fullName>
    <label>Lead Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2-Day Criteria</fullName>
            </value>
            <value>
                <fullName>Accidentally Scheduled Call</fullName>
            </value>
            <value>
                <fullName>Accountant/Bookkeeper</fullName>
            </value>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Bad Email</fullName>
            </value>
            <value>
                <fullName>Bad Phone</fullName>
            </value>
            <value>
                <fullName>BD Lead</fullName>
            </value>
            <value>
                <fullName>BoR State Not Supported</fullName>
            </value>
            <value>
                <fullName>Check Mailing</fullName>
            </value>
            <value>
                <fullName>Chose Competitor</fullName>
            </value>
            <value>
                <fullName>Contact After Tax Season</fullName>
            </value>
            <value>
                <fullName>Contact in the Future (Busy Time)</fullName>
            </value>
            <value>
                <fullName>Contractor Only Support</fullName>
            </value>
            <value>
                <fullName>Contractors Only</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Current Customer / Existing Customer</fullName>
            </value>
            <value>
                <fullName>Current Partner</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t meet 2 day processing criteria</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Engaged, Unresponsive</fullName>
            </value>
            <value>
                <fullName>Existing Account</fullName>
            </value>
            <value>
                <fullName>Feature Not Listed</fullName>
            </value>
            <value>
                <fullName>HR Feature(s) Not Listed</fullName>
            </value>
            <value>
                <fullName>International Lead</fullName>
            </value>
            <value>
                <fullName>Is Competitor</fullName>
            </value>
            <value>
                <fullName>Job Costing</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>Nanny/Household</fullName>
            </value>
            <value>
                <fullName>No current clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>