force-app/main/default/objects/Lead/fields/MDR__c.field-meta.xml
<CustomField>
    <fullName>MDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>