force-app/main/default/objects/Lead/fields/MDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>MDR_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please include information related to: current pay schedule, desired pay schedule, direct deposit or check, salaried vs hourly, target 1st pay date, types of recurring benefits/deductions/reimbursements</inlineHelpText>
    <label>MDR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>