force-app/main/default/objects/Lead/fields/Missing_Feature__c.field-meta.xml
<CustomField>
    <fullName>Missing_Feature__c</fullName>
    <label>Missing Feature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Status_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>After The Fact Payroll</fullName>
            </value>
            <value>
                <fullName>BoR State Not Supported</fullName>
            </value>
            <value>
                <fullName>Check Mailing</fullName>
            </value>
            <value>
                <fullName>Contractor Only Support</fullName>
            </value>
            <value>
                <fullName>Credit Card Billing</fullName>
            </value>
            <value>
                <fullName>HR Feature</fullName>
            </value>
            <value>
                <fullName>Job Costing + Time Tracking</fullName>
            </value>
            <value>
                <fullName>Multiple Bank Accounts</fullName>
            </value>
            <value>
                <fullName>New Plan State not Supported</fullName>
            </value>
            <value>
                <fullName>Override all Tax Amounts</fullName>
            </value>
            <value>
                <fullName>Payroll Feature</fullName>
            </value>
            <value>
                <fullName>Processing Time</fullName>
            </value>
            <value>
                <fullName>Roaming Employees</fullName>
            </value>
            <value>
                <fullName>White-labeled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>