force-app/main/default/objects/Lead/fields/mk_Likelihood_To_Buy_Segment__c.field-meta.xml
<CustomField>
    <fullName>mk_Likelihood_To_Buy_Segment__c</fullName>
    <label>MK Likelihood to Buy Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Very High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>