force-app/main/default/objects/Lead/fields/mk_PR_score__c.field-meta.xml
<CustomField>
    <fullName>mk_PR_score__c</fullName>
    <label>PR Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>