force-app/main/default/objects/Lead/fields/mk_PR_Segment__c.field-meta.xml
<CustomField>
    <fullName>mk_PR_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PR Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>