force-app/main/default/objects/Lead/fields/mkto71_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Acquisition_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acquisition Date</label>
    <type>DateTime</type>
</CustomField>