force-app/main/default/objects/Lead/fields/MQL_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MQL_DateTime__c</fullName>
    <label>MQL DateTime</label>
    <type>DateTime</type>
</CustomField>