force-app/main/default/objects/Lead/fields/MQL_Flag__c.field-meta.xml
<CustomField>
    <fullName>MQL_Flag__c</fullName>
    <inlineHelpText>MQL Flag is checked (1) If a lead has been in the MQL stage or (2) when a lead converts.</inlineHelpText>
    <label>MQL Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>