force-app/main/default/objects/Lead/fields/MQL_Reason__c.field-meta.xml
<CustomField>
    <fullName>MQL_Reason__c</fullName>
    <description>https://jira.gustocorp.com/browse/GIO-7091</description>
    <label>MQL: Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-App Join Request</fullName>
            </value>
            <value>
                <fullName>Sign-Up Ramp Intent</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Inbound Chat</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Inbound Phone</fullName>
            </value>
            <value>
                <fullName>Sign-up program interest</fullName>
            </value>
            <value>
                <fullName>Added Client</fullName>
            </value>
            <value>
                <fullName>Gusto for Partners</fullName>
            </value>
            <value>
                <fullName>Sales Generated</fullName>
            </value>
            <value>
                <fullName>Live Demo</fullName>
            </value>
            <value>
                <fullName>Product Registration</fullName>
            </value>
            <value>
                <fullName>BD Lead Pass</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>P2P Referral</fullName>
            </value>
            <value>
                <fullName>Gated Content</fullName>
            </value>
            <value>
                <fullName>Interactive Demo</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>