force-app/main/default/objects/Lead/fields/Name_of_Currently_Active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Currently_Active_Sequence__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Currently Active Sequence</label>
    <length>64</length>
    <type>Text</type>
</CustomField>