force-app/main/default/objects/Lead/fields/Next_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>Next_Business_Day__c</fullName>
    <description>Set by the trigger. This field is used to automate the task creation for the next business day.
Not used by any automation, nor in any reports.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Business Day</label>
    <type>Date</type>
</CustomField>