force-app/main/default/objects/Lead/fields/No_Firm_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_Firm_Employees__c</fullName>
    <label># Firm Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>