force-app/main/default/objects/Lead/fields/Normalized_Alternate_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Alternate_Email_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Normalized Alternate Email Domain</label>
    <length>50</length>
    <type>Text</type>
</CustomField>